<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightprimarycolor"
    android:orientation="vertical"
    tools:context=".createcontact">

    <EditText
        android:id="@+id/etname"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:autofillHints="name"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_conatct_name"
        android:inputType="text"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etnumber"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:autofillHints="number"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etlocation"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:autofillHints="location"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_Location"
        android:inputType="text"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/etweb"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:autofillHints="webpage"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_webpage"
        android:inputType="text"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="123dp"
        android:layout_marginStart="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivhappy"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="13dp"
            android:layout_weight="1"
            android:contentDescription="@string/happy"
            app:srcCompat="@drawable/happy"
            app:tint="@android:color/black" />

        <ImageView
            android:id="@+id/ivok"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="13dp"
            android:layout_weight="1"
            android:contentDescription="@string/ok"
            app:srcCompat="@drawable/ok"
            app:tint="@android:color/black" />

        <ImageView
            android:id="@+id/ivsad"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="13dp"
            android:layout_weight="1"
            android:contentDescription="@string/sad"
            app:srcCompat="@drawable/sad"
            app:tint="@android:color/black" />
    </LinearLayout>

</LinearLayout>
